k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: epikpay-prod
  labels:
    kubernetes.io/metadata.name: epikpay-prod
