k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtm-web
  namespace: epikpay-prod
  labels:
    app: mtm-web
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mtm-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: mtm-web
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: web
          image: ghcr.io/replace-me/mtm:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
